--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -176,8 +176,7 @@ textarea {
 
 .button-t-c {
   color: #000;
-  background-color: #c8d9f38a;
-  padding: 5px;
+  padding: 0 5px;
   &:hover {
     border-bottom: solid 2px #000;
     text-decoration: none; 
