--- a/app/views/books/posts_index.html.erb
+++ b/app/views/books/posts_index.html.erb
@@ -1,7 +1,7 @@
 <div class= "margin-book">
   <div class= "book-details border-css-book book-page-title">
     <h1>Books#posts_index</h1>
-    <% if @user.id == current_user.id %>
+    <% if !current_user.nil? && @user.id == current_user.id %>
       <div class= "button"><%= link_to 'new', new_book_path %></div><br>
     <% end %>
   </div>
@@ -12,7 +12,7 @@
       </div>
       <div class="book-description">
         <h1>Title: <%= link_to book.title, volume_path(book), class: "button-t-c" %></h1>
-        <% if @books.first.user_id == current_user.id %>
+        <% if !current_user.nil? && @books.first.user_id == current_user.id %>
           <div>
             <div class= "button"><%= link_to 'edit', edit_book_path(book) %></div>
             <div class= "button"><%= link_to 'destroy', book, method: :delete, data: { confirm: "削除してもいいですか？" } %></div>
