evaluation new star1

--- a/app/views/evaluations/_form.html.erb
+++ b/app/views/evaluations/_form.html.erb
@@ -25,7 +25,7 @@ $(window).ready(function(){
     starOff:  '<%= asset_path('star-off.png') %>',
     starOn : '<%= asset_path('star-on.png') %>', 
     scoreName: 'evaluation[star]',
-    score: <%= @evaluation.star %>
+    score: <%= @star %>
   });
 });
 </script>
