--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,5 @@
+<% provide(:button_text, '作成') %>
 <div class= "border-k-m">
-  <h1 class= "page-title">Books#new</h1>
+  <h1 class= "page-title">本の作成</h1>
   <%= render 'form' %>
 </div>
