--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -1,4 +1,3 @@
-<h1>Volumes#show</h1>
 <div class= "book-details border-css">
   <div class="book-image">
     <% if @book.picture.blank? %>
@@ -8,9 +7,9 @@
     <% end %>
   </div>
   <div class="book-description">
-    <h1>Title: <%= @book.title %></h1>
+    <h1><%= @book.title %></h1>
     <div>
-      star:<div class="field" id="star-raty-book"></div><%= evalu_average(@book) %>
+      評価:<div class="field" id="star-raty-book"></div><%= evalu_average(@book) %>
     </div>
     <script>
       $(window).ready(function(){
@@ -27,12 +26,12 @@
       });
     </script>
     <%= render 'favorites/favorite' %><br>
-    <p>Author: <%= link_to user_name_chenge(@book), books_posts_path(id: @book.user_id), class: "button-t-c" %></p>
+    <p>作成者: <%= link_to user_name_chenge(@book), books_posts_path(id: @book.user_id), class: "button-t-c" %></p>
     <p>
-      Created date: <%= @book.created_at %>&emsp;&emsp;
-      Updated date: <%= @book.updated_at %>
+      作成日: <%= @book.created_at %>&emsp;&emsp;
+      更新日: <%= @book.updated_at %>
     </p>
-    <p>content: <%= @book.content %></p>
+    <p>内容: <%= @book.content %></p>
   </div>
 </div>
 
@@ -47,6 +46,7 @@
           <div class= "button volume_new_css"><%= link_to "new", new_volume_path(id: @book.id) %></div>
         <% else %>
           <% if @evaluation.nil? %>
+            まだ評価していません。
             <div class= "button"><%= link_to "coment_new", new_evaluation_path(book_id: @book.id) %></div>
             <div class= "button"><%= link_to "coment_show", evaluation_path(book_id: @book.id) %></div>
           <% else %>
