--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -16,7 +16,7 @@
   <div id="picture_prev" ></div><br>
   
   <div class= "submit-button">
-    <%= f.submit "作成", class: "btn btn-primary" %>
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
 
 <% end %>
