--- a/app/views/books/posts_index.html.erb
+++ b/app/views/books/posts_index.html.erb
@@ -1,8 +1,8 @@
 <div class= "margin-book">
   <div class= "book-details border-css-book book-page-title">
-    <h1>Books#posts_index</h1>
+    <h1>本棚</h1>
     <% if !current_user.nil? && @user.id == current_user.id %>
-      <div class= "button"><%= link_to 'new', new_book_path %></div><br>
+      <div class= "button"><%= link_to '新規作成', new_book_path %></div><br>
     <% end %>
   </div>
   <% @books.each do |book| %>
@@ -11,15 +11,15 @@
         <%= image_tag book.picture.url unless book.picture.blank? %>
       </div>
       <div class="book-description">
-        <h1>Title: <%= link_to book.title, volume_path(book), class: "button-t-c" %></h1>
+        <h1><%= link_to book.title, volume_path(book), class: "button-t-c" %></h1>
         <% if !current_user.nil? && @books.first.user_id == current_user.id %>
           <div>
-            <div class= "button"><%= link_to 'edit', edit_book_path(book) %></div>
-            <div class= "button"><%= link_to 'destroy', book, method: :delete, data: { confirm: "削除してもいいですか？" } %></div>
+            <div class= "button"><%= link_to '編集', edit_book_path(book) %></div>
+            <div class= "button"><%= link_to '削除', book, method: :delete, data: { confirm: "削除してもいいですか？" } %></div>
           </div>
         <% end %>
-        <p>Created date: <%= book.created_at %></p>
-        <p>content: <%= book.content %></p>
+        <p>作成日: <%= book.created_at %></p>
+        <p>内容: <%= book.content %></p>
       </div>
     </div>
   <% end %>
