--- a/app/views/evaluations/_form.html.erb
+++ b/app/views/evaluations/_form.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_area :comment, size: "20x10", maxlength: "350", class: "form-control" %>
 
   <div class= "submit-button">
-    <%= f.submit "作成", class: "btn btn-primary" %>
+    <%= f.submit "更新", class: "btn btn-primary" %>
   </div>
 
 <% end %>
