--- a/app/views/evaluations/edit.html.erb
+++ b/app/views/evaluations/edit.html.erb
@@ -1,4 +1,4 @@
 <div class= "border-k-m">
-  <h1 class= "page-title">Evaluations#edit</h1>
+  <h1 class= "page-title">評価画面</h1>
   <%= render 'form' %>
 </div>
