--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -1,4 +1,3 @@
-<h1>Evaluations#show</h1>
 <div class= "book-details border-css">
   <div class="book-image">
     <% if @book.picture.blank? %>
@@ -38,17 +37,18 @@
 
 <div class= "book-details border-css-book evaluation-user">
   <div>
-    <% unless current_user.nil? %>
+    <% unless current_user.nil? || @user_evaluation.blank? %>
       name:<%= current_user.name %>
     <% end %>
     <% if @user_evaluation.nil? %>
+      まだ評価をしていません。
       <div class= "button"><%= link_to "coment_new", new_evaluation_path(book_id: @book.id) %></div>
     <% else %>
       <div class= "button"><%= link_to "coment_edit", edit_evaluation_path(book_id: @book.id) %></div>
     <% end %>
   </div>
   
-  <% unless current_user.nil? %>
+  <% unless current_user.nil? || @user_evaluation.blank? %>
     <div>
       star:<div class="field" id="star"></div><%= @user_evaluation.star %>
     </div>
