--- a/app/views/layouts/_sidbar.html.erb
+++ b/app/views/layouts/_sidbar.html.erb
@@ -1,9 +1,9 @@
 <% unless current_user.nil? %>
   <div class= "user_sidber border-css">
-    name: <%= current_user.name %>
+    名前: <%= current_user.name %>
     <div class= "button"><%= link_to "edit", edit_user_path(current_user) %></div><br>
-    books-Number-of-turns: <%= link_to current_user.books.count, books_posts_path(id: current_user.id), class: "button-t-c" %><br>
-    favorite: <%= current_user.favorite_books.count %>
+    本棚: <%= link_to current_user.books.count, books_posts_path(id: current_user.id), class: "button-t-c" %><br>
+    お気に入り: <%= link_to current_user.favorite_books.count, favorites_show_path %>
     <br>
   </div>
 <% end %>
