--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,8 +13,11 @@
   <%= f.password_field :password_confirmation, class:"form-control" %>
   
   <div class= "submit-button">
-    <%= f.submit "作成", class: "btn btn-primary" %>
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
-  <%= link_to 'login', login_path, class: "login-m" %>
+  
+  <% if current_user.nil? %>
+    <%= link_to 'ログイン', login_path, class: "login-m" %>
+  <% end %>
   
 <% end %>
