--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
+<% provide(:button_text, '更新') %>
 <div class="row">
   <div class= "border-k-m col-md-6 col-md-offset-3">
-    <h1 class= "page-title">Users#edit</h1>
+    <h1 class= "page-title">ユーザー情報の編集</h1>
     <%= render 'form' %>
   </div>
 </div>
