--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
+<% provide(:button_text, '作成') %>
 <div class="row">
   <div class= "border-k-m col-md-6 col-md-offset-3">
-    <h1 class= "page-title">Users#new</h1>
+    <h1 class= "page-title">新規登録</h1>
     <%= render 'form' %>
   </div>
 </div>
