--- a/app/views/volumes/edit.html.erb
+++ b/app/views/volumes/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Volumes#edit</h1>
+<% provide(:button_text, '更新') %>
 <div class= "border-k-m">
+  <h1>巻の編集</h1>
   <%= render 'form' %>
 </div>
