--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -329,6 +329,14 @@ textarea {
   font-size: 36px;
 }
 
+.back-position {
+  position: absolute;
+  right: 10%;
+  top: 10px;
+  padding: 0px 20px;
+  font-size: 36px; 
+}
+
 .submit-button {
   text-align: center;
   margin-top: 10px;
@@ -398,6 +406,14 @@ textarea {
     position: absolute;
     right: 10px;
     top: 50%;
+    padding: 0px 20px;
+    font-size: 36px;
+  }
+  
+  .back-position {
+    position: absolute;
+    right: 10px;
+    top: 10px;
     padding: 0px 20px;
     font-size: 36px;
   }
