--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -53,7 +53,11 @@ ul {
 }
 
 .login-m {
-  margin-left: 10px;
+  width: 100%;
+  background-color: #0544ff7a;
+  &:hover {
+    background-color: #0032c7;
+  }
 }
 
 section {
@@ -384,6 +388,15 @@ textarea {
 
 .user-show-book-title {
   text-align: center;
+}
+
+.fb-login-button {
+  width: 100%;
+}
+
+.login-h {
+  margin-top: 5px;
+  height: 50px;
 }
 
 
