title helper create

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:button_text, '更新') %>
+<% provide(:button_text, '本棚') %>
 <div class= "border-k-m">
   <h1 class= "page-title">本の編集</h1>
   <%= render 'form' %>
