--- a/app/views/books/posts_index.html.erb
+++ b/app/views/books/posts_index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "本棚") %>
 <div class= "margin-book">
   <div class= "book-details border-css-book book-page-title">
     <h1>本棚</h1>
