--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "ユーザー情報") %>
 <div class= "margin-book user-show">
   <div class= "user-show-title">
     <h1><%= @user.name %></h1>
