--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "お気に入り") %>
 <div class= "margin-book">
   <% @favorites.each do |favorite| %>
     <div class= "book-details border-css-book">
