--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "ユーザー") %>
 <% provide(:button_text, '更新') %>
 <div class="row">
   <div class= "border-k-m col-md-6 col-md-offset-3">
