--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Users#index</h1>
+<% provide(:title, "ユーザー一覧") %>
+<h1>ユーザー一覧</h1>
 <table class= "table table-bordered table-user">
   <thead>
     <tr>
