--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @book.title) %>
 <div class= "book-details border-css">
   <div class="book-image">
     <% if @book.picture.blank? %>
