--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,5 @@
-<% provide(:button_text, '本棚') %>
+<% provide(:title, "本棚") %>
+<% provide(:button_text, '編集') %>
 <div class= "border-k-m">
   <h1 class= "page-title">本の編集</h1>
   <%= render 'form' %>
