--- a/app/views/volumes/edit.html.erb
+++ b/app/views/volumes/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "本棚") %>
 <% provide(:button_text, '更新') %>
 <div class= "border-k-m">
-  <h1>巻の編集</h1>
+  <h1>話数の編集</h1>
   <%= render 'form' %>
 </div>
