--- a/app/views/volumes/new.html.erb
+++ b/app/views/volumes/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "本棚") %>
 <% provide(:button_text, '作成') %>
 <div class= "border-k-m">
-  <h1>巻の作成</h1>
+  <h1>話数の作成</h1>
   <%= render 'form' %>
 </div>
