--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -14,6 +14,6 @@
 <% end %>
 <% unless current_user.nil? %>
   <% if current_user.id == @book.user_id %>
-    <div class= "button"><%= link_to "edit", edit_book_path(@book) %></div>
+    <div class= "button"><%= link_to "編集", edit_book_path(@book) %></div>
   <% end %>
 <% end %>
