--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
     <nav>
       <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
         <li><%= link_to "ホーム", root_path %></li>
+        <li><%= link_to "利用方法", to_use_path, :target => "_blank" %></li>
         <% if logged_in? %>
         <% if current_user.admin? %>
           <li><%= link_to "ユーザー一覧", users_path %></li>
