--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   
   <% if current_user.nil? %>
-    <%= link_to 'ログイン', login_path, class: "login-m" %>
+    <div class= "button"><%= link_to 'ログイン', login_path %></div>
   <% end %>
   
 <% end %>
