--- a/app/views/volumes/_form.html.erb
+++ b/app/views/volumes/_form.html.erb
@@ -30,7 +30,7 @@
   </div>
   
   <div class= "submit-button">
-    <%= f.submit "作成", class: "btn btn-primary" %>
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
   
 <% end %>
