--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -27,7 +27,7 @@
       });
     </script>
     <% unless current_user.nil? %>
-      <%= render 'favorites/favorite' if current_user.id == @book.user.id %><br>
+      <%= render 'favorites/favorite' %><br>
     <% end %>
     <p>作成者: <%= link_to user_name_chenge(@book), books_posts_path(id: @book.user_id), class: "button-t-c" %></p>
     <p>
@@ -43,19 +43,17 @@
   <div class= "volume-new-bottom">
     <div class= "border-css">
       <% if current_user.nil? %>
-        <div class= "button"><%= link_to "コメント一覧", evaluation_path(book_id: @book.id) %></div>
+        <div class= "button"><%= link_to "評価一覧", evaluation_path(book_id: @book.id) %></div>
       <% else %>
         <% if current_user.id == @book.user_id %>
           <div class= "button volume_new_css"><%= link_to "新規作成", new_volume_path(id: @book.id) %></div>
-          <div class= "button"><%= link_to "コメント一覧", evaluation_path(book_id: @book.id) %></div>
+          <div class= "button"><%= link_to "評価一覧", evaluation_path(book_id: @book.id) %></div>
         <% else %>
           <% if @evaluation.nil? %>
             まだ評価していません。
-            <div class= "button"><%= link_to "評価する", new_evaluation_path(book_id: @book.id) %></div>
-            <div class= "button"><%= link_to "コメント一覧", evaluation_path(book_id: @book.id) %></div>
+            <div class= "button"><%= link_to "評価一覧", evaluation_path(book_id: @book.id) %></div>
           <% else %>
             名前:<%= current_user.name %>
-            <div class= "button"><%= link_to "編集", edit_evaluation_path(book_id: @book.id) %></div>
             <div class= "button"><%= link_to "評価一覧", evaluation_path(book_id: @book.id) %></div>
             <div>
               評価:<div class="field" id="star"></div><%= @evaluation.star %>
